--- a/WebContent/listAuditActions.zul
+++ b/WebContent/listAuditActions.zul
@@ -77,6 +77,7 @@
 
                                         </div>
                                         <!--Download button-->
+                                          <label id="lblInfo" value="" sclass="lblbold" visible="false"/>
                                         <div align="right">
                                             <button id="btnDownload" label="${c:l('sp.common.actions.download')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.download.tooltip')}"/>
                                         </div>
