--- a/WebContent/listProducts.zul
+++ b/WebContent/listProducts.zul
@@ -77,6 +77,7 @@
                                         <!--Download button-->
                                         <div align="right">
                                             <button id="btnDownload" label="${c:l('sp.common.actions.download')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.download.tooltip')}"/>
+                                            <button id="btnExportPdf" label="${c:l('sp.common.actions.download.pdf')}"  width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.download.pdf')}"/>
                                         </div>
                                     </vlayout>
                                 </div>
