prueba de add y egress stock

--- a/WebContent/adminAddStock.zul
+++ b/WebContent/adminAddStock.zul
@@ -228,9 +228,9 @@
                                                          </row>
                                                         <row id="rowSerials" visible="false">
                                                           <label value="${c:l('sp.common.serials')}" sclass="lblbold"/>
-                                     				    	<grid fixedLayout="true" id="gridSerials">
+                                     				    	<grid fixedLayout="true" id="gridSerials" height="200px" width="330px">
 															<columns >
-																<column width="330px" label="${c:l('sp.common.serial')}" />
+																<column width="300px" label="${c:l('sp.common.serial')}" />
 															</columns>
 															 <rows id="rows">
 																										       
