--- a/WebContent/listStock.zul
+++ b/WebContent/listStock.zul
@@ -26,7 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -54,12 +54,13 @@
                                             <!--Record Listbox-->
                                             <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="135px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.descripton')}" width="240px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="125px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.descripton')}" width="225px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.ubicationBox')}" width="120px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="120px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.amount')}" width="95px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stock')}" width="95px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="125px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.amount')}" width="85px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stock')}" width="85px" sort="auto"/>
+                                                    <listheader label="-" width="45px"/>
                                                     <listheader label="-" width="45px"/>
                                                     <listheader label="-" width="45px"/>
                                                     
