--- a/WebContent/css/general.css
+++ b/WebContent/css/general.css
@@ -589,9 +589,9 @@ word-wrap: break-word;
 }
 
 .yellow1 {
-color: #e9e9e9;
-border: #80C454;
-background: #80C454;
-background: -webkit-gradient(linear, left top, left bottom, from(#80C454), to(rgb(81, 163, 28)));
-background: -moz-linear-gradient(top, #80C454,rgb(81, 163, 28));
+    color: #e9e9e9;
+    border: #54c4ba;
+    background: #54c4a0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#68dcef), to(rgb(172, 214, 234)));
+    background: -moz-linear-gradient(top, #68dcef,rgb(172, 214, 234));
 }
